fixes jumping carousel

--- a/components/imaginationTv/intvHostsCarousel.module.scss
+++ b/components/imaginationTv/intvHostsCarousel.module.scss
@@ -61,7 +61,8 @@
 
   :global(.slick-slide) {
     .episodePanel .episodeContentInfo {
-      display: none;
+      // display: none;
+      visibility: hidden;
     }
   }
     
@@ -71,6 +72,7 @@
 
       .episodeContentInfo {
         display: block;
+        visibility: visible;
       }
     }
   }
